tests/parse-errors/contracts/destructor_invalid_this.cx
struct Lifetime {};

~Lifetime(value) {}

int main() {
    return 0;
}
